@@ -1,3 +1,5 @@
+- Bug Fix: OptionalCurricularCourse should never be associated to Enrolment
+
 25.5.0 (27-11-2019)
 - Refactor: CompetenceCourse duration by AcademicPeriod, instead of RegimeType 
 
